--- a/index.ipynb
+++ b/index.ipynb
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    number_ = len(travel_destinations)\n",
+    "      len(travel_destinations)\n",
     "number_of_destinations()"
    ]
   },
