--- a/index.ipynb
+++ b/index.ipynb
@@ -58,13 +58,12 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "      number_of_destinations = len(travel_destinations)\n",
-    "number_of_destinations()"
+    "      len(travel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
