--- a/index.ipynb
+++ b/index.ipynb
@@ -64,11 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "number_of_destinations() # 6"
+    "print(number_of_destinations()) # 6"
    ]
   },
   {
