--- a/index.ipynb
+++ b/index.ipynb
@@ -52,19 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "      number_of_destinationslen(travel_destinations)\n",
+    "      number_of_destinations = len(travel_destinations)\n",
     "number_of_destinations()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
