--- a/index.ipynb
+++ b/index.ipynb
@@ -87,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return t"
+    "    return travel_destination[0]"
    ]
   },
   {
