--- a/index.ipynb
+++ b/index.ipynb
@@ -87,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return travel_destination[1]"
+    "    return travel_destinations[1]"
    ]
   },
   {
