Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,12 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return travel_destinations[1]"
+    "    return travel_destinations(1)\n",
+    "p"
    ]
   },
   {
