--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    return travel_destinations.upp\n",
+    "    return travel_destinations\n",
     "capitalize_countries()"
    ]
   },
