--- a/index.ipynb
+++ b/index.ipynb
@@ -242,6 +242,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    travel_destinatio\n",
     "    return travel_destinations\n",
     "capitalize_countries()"
    ]
