--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for destination in des"
+    "    for destination in travel_destinations:\n",
+    "        return tra"
    ]
   },
   {
