--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,9 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for destination in travel_destinations:\n",
-    "        return tra"
+    "        return travel_destinations.title()\n",
+    "\n",
+    "    "
    ]
   },
   {
