--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries\n",
+    "        capitalized_countries.append(destination.ti)\n",
     "capitalize_countries()"
    ]
   },
