--- a/index.ipynb
+++ b/index.ipynb
@@ -244,6 +244,7 @@
     "def capitalize_countries():\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_countries.append(destination.title())\n",
+    "        return capitalize_countries()\n",
     "capitalize_countries()"
    ]
   },
